--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <!-- 基础SEO -->
-        <title>一饭封神 - AI智能菜谱生成平台</title>
+        <title>AI美食大师 - AI智能菜谱生成平台</title>
         <meta
             name="description"
-            content="一饭封神是专业的AI智能菜谱生成平台，汇聚中华八大菜系厨艺大师，根据您的食材智能生成个性化菜谱。支持营养分析、效果图生成，让烹饪变得简单有趣。"
+            content="AI美食大师是专业的AI智能菜谱生成平台，汇聚中华八大菜系厨艺大师，根据您的食材智能生成个性化菜谱。支持营养分析、效果图生成，让烹饪变得简单有趣。"
         />
         <meta name="keywords" content="AI菜谱,智能菜谱生成,八大菜系,川菜,粤菜,苏菜,鲁菜,浙菜,湘菜,闽菜,徽菜,营养分析,烹饪指导,食材搭配,美食推荐" />
         <meta name="author" content="liuziting" />
@@ -21,8 +21,8 @@
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-        <meta name="apple-mobile-web-app-title" content="一饭封神" />
-        <meta name="application-name" content="一饭封神" />
+        <meta name="apple-mobile-web-app-title" content="AI美食大师" />
+        <meta name="application-name" content="AI美食大师" />
         <meta name="theme-color" content="#fbbf24" />
         <meta name="msapplication-TileColor" content="#fbbf24" />
         <meta name="msapplication-navbutton-color" content="#fbbf24" />
