--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <body>
         <div id="app"></div>
         <script type="module" src="/src/main.ts"></script>
+        <script type="text/javascript" src="/static/live2dw/lib/L2Dwidget.min.js"></script>
         <script type="text/javascript">
             ;(function (c, l, a, r, i, t, y) {
                 c[a] =
