增加我的食材界面以及对应功能

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
     <head>
         <meta charset="UTF-8" />
-        <link rel="shortcut icon" href="/favicon.ico" />
+        <link rel="shortcut icon" href="./favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <!-- 基础SEO -->
@@ -28,7 +28,7 @@
         <meta name="msapplication-navbutton-color" content="#fbbf24" />
 
         <!-- 图标和清单 -->
-        <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="./favicon.ico" />
 
         <!-- 预连接和DNS预解析 -->
         <link rel="preconnect" href="https://api.deepseek.com" />
@@ -38,21 +38,6 @@
     </head>
     <body>
         <div id="app"></div>
-        <script type="module" src="/src/main.ts"></script>
-        <script type="text/javascript" src="/static/live2dw/lib/L2Dwidget.min.js"></script>
-        <script type="text/javascript">
-            ;(function (c, l, a, r, i, t, y) {
-                c[a] =
-                    c[a] ||
-                    function () {
-                        ;(c[a].q = c[a].q || []).push(arguments)
-                    }
-                t = l.createElement(r)
-                t.async = 1
-                t.src = 'https://www.clarity.ms/tag/' + i
-                y = l.getElementsByTagName(r)[0]
-                y.parentNode.insertBefore(t, y)
-            })(window, document, 'clarity', 'script', 'st3hwrwf7x')
-        </script>
+        <script type="module" src="./src/main.ts"></script>
     </body>
 </html>
